--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gcgonzales.histocollecto">
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="adroid.hardware.camera" />
+    <uses-permission android:name="adroid.hardware.camera.autofocus" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
